# RELbot

./: README
ROS2-RELbot/install/: local_setup.sh  setup.sh
ROS2-RELbot/install/cam_imag_pro/lib/cam_imag_pro/: light_pos_indicator_node
ROS2-RELbot/install/cam_imag_pro/share/cam_imag_pro/: local_setup.sh  package.sh
ROS2-RELbot/install/setpoints_publisher/lib/setpoints_publisher/: setpoints_publisher
ROS2-RELbot/install/setpoints_publisher/share/setpoints_publisher/: local_setup.sh  package.sh  package.xml
ROS2-RELbot/src/cam_imag_pro/: CMakeLists.txt
ROS2-RELbot/src/setpoints_publisher/: CMakeLists.txt
ROS2-RELbot/src/setpoints_publisher/include/setpoints_publisher/: setpoints_publisher.hpp
ROS2-RELbot/src/setpoints_publisher/launch/: start_all_nodes.launch.py
ROS2-RELbot/src/setpoints_publisher/src/: setpoints_publisher.cpp
production/ROS2-RELbot-V2/: README
production/ROS2-RELbot-V2/log/: latest_list
production/ROS2-RELbot-V2/src/cam_imag_pro/: CMakeLists.txt
production/ROS2-RELbot-V2/src/connector_node/: CMakeLists.txt  package.xml
production/ROS2-RELbot-V2/src/connector_node/src/: connector_node.cpp
production/ROS2-RELbot-V2/src/sequence_controller/: README.md
test/ROS-test/test_sequence_controller/: CMakeLists.txt  package.xml
test/ROS-test/test_sequence_controller/launch/: start_test_nodes.launch.py
test/ROS-test/test_sequence_controller/src/: test_sequence_controller.cpp
test/xenomia4-framework/: .gitignore
test/xenomia4-framework/src/custom_msgs/: CMakeLists.txt
xenomia4-framework/src/custom_msgs/msg/: Ros2Xeno.msg
(+28 files in other folders)
